Fix CV spacing

--- a/components/CV/styles.module.scss
+++ b/components/CV/styles.module.scss
@@ -52,9 +52,6 @@
     line-height: 1;
     color: hsl(0deg, 0%, 30%);
   }
-  &__title {
-    line-height: 1.1;
-  }
   &__role {
     font-weight: 700;
   }
